--- a/alex-josh/public/admin.html
+++ b/alex-josh/public/admin.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
     <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
+  
+    <script id="authorStats-template" type="text/x-handlebars-template">
+      <ul class="author-stats">
+        <li>{{words}}</li>
+        <li>{{articles}}</li>
+      </ul>
+    </script>
   </head>
   <body>
     <header class="site-header clearfix">
