--- a/alex-josh/public/admin.html
+++ b/alex-josh/public/admin.html
@@ -12,10 +12,8 @@
     <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
   
     <script id="authorStats-template" type="text/x-handlebars-template">
-      <ul class="author-stats">
-        <li>{{words}}</li>
-        <li>{{articles}}</li>
-      </ul>
+      <li>Author Name: {{name}}</li>
+      <li>Words by Author: {{numWords}}</li>
     </script>
   </head>
   <body>
@@ -55,7 +53,7 @@
     <script src="/scripts/article.js"></script>
     <script src="/scripts/articleView.js"></script>
     <script>
-      Article.fetchAll();
+      app.Article.fetchAll(app.articleView.initAdminPage);
     </script>
   </body>
 </html>
